Fixed minor overflow issues in GUI

--- a/app/assets/stylesheets/metaproteomics_results.css.less
+++ b/app/assets/stylesheets/metaproteomics_results.css.less
@@ -308,8 +308,11 @@ span.dir.text {
 }
 
 #load-datasets-card .card-supporting-text {
-    max-height: 500px;
+    max-height: 600px;
     overflow-y: auto;
 }
 
-
+#analysis-add-dataset-card .card-supporting-text {
+    max-height: 600px;
+    overflow-y: auto;
+}
